<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/recipeListThumbnail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/thumbnail" />

    <RelativeLayout
        android:id="@+id/recipeListTextLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/recipeListThumbnail"
        android:layout_alignTop="@+id/recipeListThumbnail"
        android:layout_toEndOf="@+id/recipeListThumbnail">

        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:maxLines="3"
            android:text="@string/recipeTitle"
            android:textSize="18sp"
            android:textColor="@color/citrus"/>

        <TextView
            android:id="@+id/recipeServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipeTitle"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/servings"
            android:textSize="16sp"
            android:textColor="@color/orange"/>

        <TextView
            android:id="@+id/recipePrepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipeServings"
            android:layout_alignTop="@id/recipeServings"
            android:layout_toEndOf="@id/recipeServings"
            android:textSize="16sp"
            android:text="@string/recipeTime"
            android:textColor="@color/orange"/>

        <ImageButton
            android:id="@+id/notificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/recipePrepTime"
            android:layout_marginEnd="4dp"
            app:srcCompat="@android:drawable/ic_menu_set_as" />


    </RelativeLayout>




</RelativeLayout>